2006-03-09  Murray Cumming  <murrayc@murrayc.com>

	* glom/data_structure/layout/layoutgroup.cc:
	* glom/data_structure/layout/layoutgroup.h: Added get_items_count().
	* glom/dialog_layout_report.cc: get_original_report_name(): Do not crash if 
	there are top-level fields. Still need to handle this properly though.
	* glom/utility_widgets/datawidget.cc: set_editable(): 
	Call set_sensitive() on ComboBoxes, because the menu still changes the 
	value if we just call set_editable on its Entry.

2006-03-09  Murray Cumming  <murrayc@murrayc.com>

	* glom/base_db.cc:
	* glom/base_db.h: report_build_records() takes a vector of LayoutItem 
	instead of LayoutItem_Field, so it can handle text items. So text objects 
	now work on record rows of reports.

2006-03-09  Murray Cumming  <murrayc@murrayc.com>

	* glom/base_db.cc:
	* glom/base_db.h: Added offer_textobject().
	* glom/data_structure/layout/Makefile.am:
	* glom/data_structure/layout/layoutitem_text.cc:
	* glom/data_structure/layout/layoutitem_text.h:
	Added Text layout part, for adding arbitrary text or empty text 
	with a title, to a details layout. Does not work on reports yet.
	* glom/data_structure/translatable_item.cc:
	* glom/data_structure/translatable_item.h: get_translatable_type_name():
	Update.
	* glom/dialog_layout_report.cc: Constructor: Add the Text object as a 
	possible part to add.
	* glom/document/document_glom.cc:
	* glom/document/document_glom.h: load_after_group(), save_before_group(): 
	Handle the text object layout part.
	* glom/glom.glade:
	* glom/mode_data/dialog_layout_details.cc:
	* glom/mode_data/dialog_layout_details.h: Added Add Text button and 
	handled it.
	* glom/mode_design/Makefile.am:
        * glom/mode_design/dialog_textobject.h
        * glom/mode_design/dialog_textobject.cc: New dialog for editing the 
	text object.
	* glom/utility_widgets/Makefile.am:
	* glom/utility_widgets/flowtablewithfields.cc:
	* glom/utility_widgets/flowtablewithfields.h: 